added third section having flexbox inside

--- a/index.html
+++ b/index.html
@@ -110,15 +110,70 @@
       <div class="main-line">
         <h3>stay up to date</h3>
       </div>
-      <div class="lines">
-
-      </div>
+      <div class="lines"></div>
       <div class="email-form">
-        <input type="email" name="email" placeholder="email address">
-        
+        <input type="email" name="email" placeholder="email address" />
       </div>
       <div class="email-button">
-        <input type="submit" value="subscribe">
+        <input type="submit" value="subscribe" />
+      </div>
+    </section>
+    <section class="container3">
+      <div class="section3-heading">
+        <h2>text columns with icons</h2>
+      </div>
+      <div class="extradiv">
+        <div class="lines3"></div>
+      </div>
+
+      <div class="flex-box-container">
+        <div class="work-flex1">
+          <i class="far fa-hand-rock"></i>
+          <h3>remote knock</h3>
+          <p>
+            Don't even pull out your phone. A custom knock on your phone or door
+            is enough to open Sesame.
+          </p>
+        </div>
+        <div class="work-flex1">
+          <i class="fas fa-battery-full"></i>
+          <h3>long lasting battery</h3>
+          <p>
+            Sesame lasts about 500 days, and sends a notification when the
+            batteries are low.
+          </p>
+        </div>
+        <div class="work-flex1">
+          <i class="fa fa-key"></i>
+          <h3>key still works</h3>
+          <p>
+            On top of all that, you can still use your key to open the door and
+            there is a thumb turn on Sesame for indoor manual usage
+          </p>
+        </div>
+      </div>
+      <div class="flex-box-container">
+        <div class="work-flex1">
+          <i class="fas fa-sync"></i>
+          <h3>auto lock</h3>
+          <p>
+            Have your door automatically lock as you close it.
+          </p>
+        </div>
+        <div class="work-flex1">
+          <i class="fas fa-microphone"></i>
+          <h3>voice controll</h3>
+          <p>
+            Talk to your phone to open the door.
+          </p>
+        </div>
+        <div class="work-flex1">
+          <i class="fas fa-question"></i>
+          <h3>under development</h3>
+          <p>
+            We are working hard to bring you more cool features.
+          </p>
+        </div>
       </div>
     </section>
   </body>
