little updated faq section added made by accordion

--- a/index.html
+++ b/index.html
@@ -176,5 +176,74 @@
         </div>
       </div>
     </section>
+    <section class="container3">
+      <div class="section3-heading">
+        <h2>FAQ</h2>
+      </div>
+      <div class="lines3"></div>
+      <main id="accordion">
+        <section id="item1">
+          <a href="#item1">
+            <h5>
+              Can I still use my original key or manually lock/unlock the door?
+              YES.
+            </h5>
+          </a>
+          <p>
+            Yes, of course. There is a thumb turn on Sesame for indoor manual
+            usage and your key still works.
+          </p>
+        </section>
+        <section id="item2">
+          <a href="#item2">
+            <h5>What if my phone is lost/stolen?</h5>
+          </a>
+          <p>
+            You can log-on to candyhouse.co and remove access authorization for
+            that device. When you get a new phone, simply download the Sesame
+            App and log in to your account. And key still works.
+          </p>
+        </section>
+        <section id="item3">
+          <a href="#item3">
+            <h5>
+              What if my phone is out of power? And what if Sesame is out of
+              power?
+            </h5>
+          </a>
+          <p>
+            Sesame's power lasts about 500 days. It will keep notifying you
+            through app when batteries are low. Also, it is very easy to order
+            CR123A batteries on Amazon/eBay and get them in two days.
+          </p>
+        </section>
+        <section id="item4">
+          <a href="#item4">
+            <h5>What phone should I have to use Sesame?</h5>
+          </a>
+          <p>Sesame is compatible with both iPhone and Android smartphones</p>
+        </section>
+        <section id="item5">
+          <a href="#item5">
+            <h5>I have an old door lock, will Sesame work?</h5>
+          </a>
+          <p>
+            Sesame is designed to work on any Single-Cylinder deadbolts in the
+            world. Current model is optimized for US/Canada/North Europe. If you
+            would like to make sure whether Sesame works, please send a picture
+            of your door lock to sesame@candyhouse.co
+          </p>
+        </section>
+        <section id="item6">
+          <a href="#item6">
+            <h5>Is Sesame safe?</h5>
+          </a>
+          <p>
+            Sesame is AES 256-bit and TLS 1.2 encrypted, which is military grade
+            encryption. Sorry, bad guys.
+          </p>
+        </section>
+      </main>
+    </section>
   </body>
 </html>
